<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/viewProfile"
            android:icon="@drawable/ic_face"
            android:title="@string/donor_view_profile" />

        <item
            android:id="@+id/nav_delete_donor"
            android:icon="@drawable/ic_delete"
            android:title="@string/donor_delete_profile" />

        <item
            android:id="@+id/organizationList"
            android:icon="@drawable/ic_view_list"
            android:title="@string/view_organization_list_string" />

        <item
            android:icon="@drawable/ic_edit_location"
            android:title="@string/set_location_string"
            android:id="@+id/locationUpdate" />


        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout_button" />

        <item
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share_app_string"
            android:id="@+id/drawerAppShare"/>

        <item
            android:icon="@drawable/ic_help_black"
            android:title="@string/help_button_string"
            android:id="@+id/actionHelp"/>

    </group>

    <item android:title="@string/menu_communicate_string">
        <menu>
            <item
                android:id="@+id/takeFeedBack"
                android:icon="@drawable/ic_feedback_black"
                android:title="@string/give_feedback_string" />
        </menu>
    </item>

</menu>