<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context="com.chowdhuryfahim.bloodinquiry.DonorProfileActivity">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/cover_photo_height"
            android:scaleType="centerCrop"
            android:contentDescription="@string/donor_profile_cover_description"
            android:src="@drawable/donor_cover"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/twenty_sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:paddingStart="@dimen/twentyTwo_dp"
        android:paddingEnd="@dimen/twenty_dp"
        android:layout_marginTop="@dimen/oneFifteen_dp"
        android:text="@string/demo_name"
        android:id="@+id/profileNameText"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/oneFifty_dp"
        android:clipToPadding="false"
        android:id="@+id/donorProfileScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/twenty_dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/org_admin_phone_string"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_dp"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/black"
                android:text="@string/demo_phone_number"
                android:id="@+id/profilePhoneText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_dp"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/black"
                android:text="@string/demo_email"
                android:id="@+id/profileEmailText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donor_bloodgroup_edit_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_dp"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/black"
                android:text="@string/ab_positive_string"
                android:id="@+id/profileBloodText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_gender_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_dp"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/black"
                android:text="@string/donor_gender_radio_male"
                android:id="@+id/profileGenderText"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donor_age_edit_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_dp"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/black"
                android:text="@string/demo_age"
                android:id="@+id/profileAgeText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donor_status_edit_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_dp"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/black"
                android:text="@string/donor_status_radio_available"
                android:id="@+id/profileStatusText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donor_org_edit_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_dp"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/black"
                android:text="@string/app_name"
                android:id="@+id/profileOrgText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/org_location_label"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/twenty_dp"
                android:textSize="@dimen/twenty_sp"
                android:textColor="@color/black"
                android:text="@string/demo_location"
                android:id="@+id/profileLocationText"/>

        </LinearLayout>

    </ScrollView>
    <android.support.design.widget.FloatingActionButton
        android:layout_width="@dimen/fiftySix_dp"
        android:layout_height="@dimen/fiftySix_dp"
        android:layout_marginEnd="@dimen/fifteen_dp"
        android:layout_marginTop="@dimen/cover_fab_margin_top"
        android:layout_gravity="end"
        android:clickable="true"
        app:fabSize="normal"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:backgroundTint="@color/colorPrimary"
        android:onClick="editDonorProfile"
        android:src="@drawable/ic_mode_edit"
        android:id="@+id/donorProfileEditButton"/>


</FrameLayout>
