<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/ListItemStyle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donor_name_edit_text"
        android:id="@+id/donorListNameText"
        style="@style/NormalTextStyle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donor_bloodgroup_edit_text"
        android:id="@+id/donorListBloodGroupText"
        style="@style/NormalTextStyle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donor_location_edit_text"
        android:id="@+id/donorListLocationText"
        style="@style/NormalTextStyle"/>


</LinearLayout>