<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chowdhuryfahim.bloodinquiry.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="@dimen/three_hundred_dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/twentyFive_dp"
        android:paddingEnd="@dimen/twentyFive_dp"
        android:paddingTop="@dimen/forty_dp"
        android:paddingBottom="@dimen/forty_dp"
        android:background="@color/grey"
        android:gravity="center"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/boot_logo"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="@dimen/twenty_dp"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dp"
            android:id="@+id/phoneInputLayout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/donor_phone_edit_text"
                android:id="@+id/userPhone"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/passinputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dp">

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/donor_password_edit_text"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp"
            android:text="@string/login_button"
            style="@style/ButtonStyle"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/loginBtn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:text="@string/no_account_text"
            android:gravity="center"
            android:textSize="@dimen/fifteen_sp"
            android:clickable="true"
            android:onClick="gotoRegistration"
            android:id="@+id/signupText"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="@dimen/fifteen_dp"
            android:text="@string/forgot_password_text"
            android:gravity="center"
            android:textSize="@dimen/fifteen_sp"
            android:clickable="true"
            android:onClick="resetPassword"
            android:id="@+id/forgotPasswordText"/>

    </LinearLayout>

</ScrollView>
