<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/five_dp"
    app:cardCornerRadius="@dimen/five_dp"
    android:clickable="true"
    android:focusable="true"
    android:stateListAnimator="@animator/button_animator"
    android:foreground="?android:attr/selectableItemBackground"
    android:id="@+id/donorListCard">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/ten_dp"
        style="@style/ListItemStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donor_name_edit_text"
            android:id="@+id/donorListNameText"
            style="@style/NormalTextStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donor_bloodgroup_edit_text"
            android:id="@+id/donorListBloodGroupText"
            style="@style/NormalTextStyle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donor_location_edit_text"
            android:id="@+id/donorListLocationText"
            style="@style/NormalTextStyle"/>

    </LinearLayout>

</android.support.v7.widget.CardView>

